0.8.0/_sources/generated/statsmodels.tsa.statespace.structural.UnobservedComponentsResults.rst.txt
statsmodels.tsa.statespace.structural.UnobservedComponentsResults
=================================================================

.. currentmodule:: statsmodels.tsa.statespace.structural

.. autoclass:: UnobservedComponentsResults

   

   
   .. rubric:: Methods

   .. autosummary::
      :toctree:
   
    
    
      ~UnobservedComponentsResults.aic
    
    
      ~UnobservedComponentsResults.bic
    
    
      ~UnobservedComponentsResults.bse
    
    
      ~UnobservedComponentsResults.conf_int
    
    
      ~UnobservedComponentsResults.cov_params
    
    
      ~UnobservedComponentsResults.cov_params_approx
    
    
      ~UnobservedComponentsResults.cov_params_oim
    
    
      ~UnobservedComponentsResults.cov_params_opg
    
    
      ~UnobservedComponentsResults.cov_params_robust
    
    
      ~UnobservedComponentsResults.cov_params_robust_approx
    
    
      ~UnobservedComponentsResults.cov_params_robust_oim
    
    
      ~UnobservedComponentsResults.f_test
    
    
      ~UnobservedComponentsResults.fittedvalues
    
    
      ~UnobservedComponentsResults.forecast
    
    
      ~UnobservedComponentsResults.get_forecast
    
    
      ~UnobservedComponentsResults.get_prediction
    
    
      ~UnobservedComponentsResults.hqic
    
    
      ~UnobservedComponentsResults.impulse_responses
    
    
      ~UnobservedComponentsResults.initialize
    
    
      ~UnobservedComponentsResults.llf
    
    
      ~UnobservedComponentsResults.llf_obs
    
    
      ~UnobservedComponentsResults.load
    
    
      ~UnobservedComponentsResults.loglikelihood_burn
    
    
      ~UnobservedComponentsResults.normalized_cov_params
    
    
      ~UnobservedComponentsResults.plot_components
    
    
      ~UnobservedComponentsResults.plot_diagnostics
    
    
      ~UnobservedComponentsResults.predict
    
    
      ~UnobservedComponentsResults.pvalues
    
    
      ~UnobservedComponentsResults.remove_data
    
    
      ~UnobservedComponentsResults.resid
    
    
      ~UnobservedComponentsResults.save
    
    
      ~UnobservedComponentsResults.simulate
    
    
      ~UnobservedComponentsResults.summary
    
    
      ~UnobservedComponentsResults.t_test
    
    
      ~UnobservedComponentsResults.test_heteroskedasticity
    
    
      ~UnobservedComponentsResults.test_normality
    
    
      ~UnobservedComponentsResults.test_serial_correlation
    
    
      ~UnobservedComponentsResults.tvalues
    
    
      ~UnobservedComponentsResults.wald_test
    
    
      ~UnobservedComponentsResults.wald_test_terms
    
    
      ~UnobservedComponentsResults.zvalues
    
   
   

   
   
   .. rubric:: Attributes

   .. autosummary::
   
      ~UnobservedComponentsResults.autoregressive
      ~UnobservedComponentsResults.cycle
      ~UnobservedComponentsResults.level
      ~UnobservedComponentsResults.regression_coefficients
      ~UnobservedComponentsResults.seasonal
      ~UnobservedComponentsResults.trend
      ~UnobservedComponentsResults.use_t
   
   