v0.13.5/_sources/generated/statsmodels.tsa.statespace.structural.UnobservedComponentsResults.rst.txt
statsmodels.tsa.statespace.structural.UnobservedComponentsResults
=================================================================

.. currentmodule:: statsmodels.tsa.statespace.structural

.. autoclass:: UnobservedComponentsResults
   :exclude-members: append,apply,conf_int,cov_params,extend,f_test,forecast,get_forecast,get_prediction,impulse_responses,info_criteria,initialize,load,news,normalized_cov_params,plot_components,plot_diagnostics,predict,remove_data,save,simulate,summary,t_test,t_test_pairwise,test_heteroskedasticity,test_normality,test_serial_correlation,wald_test,wald_test_terms,

   
   
   .. rubric:: Methods

   .. autosummary::
      :toctree:

      ~UnobservedComponentsResults.append
      ~UnobservedComponentsResults.apply
      ~UnobservedComponentsResults.conf_int
      ~UnobservedComponentsResults.cov_params
      ~UnobservedComponentsResults.extend
      ~UnobservedComponentsResults.f_test
      ~UnobservedComponentsResults.forecast
      ~UnobservedComponentsResults.get_forecast
      ~UnobservedComponentsResults.get_prediction
      ~UnobservedComponentsResults.impulse_responses
      ~UnobservedComponentsResults.info_criteria
      ~UnobservedComponentsResults.initialize
      ~UnobservedComponentsResults.load
      ~UnobservedComponentsResults.news
      ~UnobservedComponentsResults.normalized_cov_params
      ~UnobservedComponentsResults.plot_components
      ~UnobservedComponentsResults.plot_diagnostics
      ~UnobservedComponentsResults.predict
      ~UnobservedComponentsResults.remove_data
      ~UnobservedComponentsResults.save
      ~UnobservedComponentsResults.simulate
      ~UnobservedComponentsResults.summary
      ~UnobservedComponentsResults.t_test
      ~UnobservedComponentsResults.t_test_pairwise
      ~UnobservedComponentsResults.test_heteroskedasticity
      ~UnobservedComponentsResults.test_normality
      ~UnobservedComponentsResults.test_serial_correlation
      ~UnobservedComponentsResults.wald_test
      ~UnobservedComponentsResults.wald_test_terms
   
   
   

   
   
   .. rubric:: Properties

   .. autosummary::
      :toctree:

      ~UnobservedComponentsResults.aic
      ~UnobservedComponentsResults.aicc
      ~UnobservedComponentsResults.autoregressive
      ~UnobservedComponentsResults.bic
      ~UnobservedComponentsResults.bse
      ~UnobservedComponentsResults.cov_params_approx
      ~UnobservedComponentsResults.cov_params_oim
      ~UnobservedComponentsResults.cov_params_opg
      ~UnobservedComponentsResults.cov_params_robust
      ~UnobservedComponentsResults.cov_params_robust_approx
      ~UnobservedComponentsResults.cov_params_robust_oim
      ~UnobservedComponentsResults.cycle
      ~UnobservedComponentsResults.fittedvalues
      ~UnobservedComponentsResults.freq_seasonal
      ~UnobservedComponentsResults.hqic
      ~UnobservedComponentsResults.level
      ~UnobservedComponentsResults.llf
      ~UnobservedComponentsResults.llf_obs
      ~UnobservedComponentsResults.loglikelihood_burn
      ~UnobservedComponentsResults.mae
      ~UnobservedComponentsResults.mse
      ~UnobservedComponentsResults.pvalues
      ~UnobservedComponentsResults.regression_coefficients
      ~UnobservedComponentsResults.resid
      ~UnobservedComponentsResults.seasonal
      ~UnobservedComponentsResults.sse
      ~UnobservedComponentsResults.states
      ~UnobservedComponentsResults.trend
      ~UnobservedComponentsResults.tvalues
      ~UnobservedComponentsResults.use_t
      ~UnobservedComponentsResults.zvalues
   
   
   